--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "geist": "^1.3.1",
-    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.11",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
