--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "file-saver": "^2.0.5",
     "geist": "^1.3.1",
     "html2canvas-pro": "^1.5.11",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
@@ -66,6 +68,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
