--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@radix-ui/react-slot": "1.1.1",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
+    "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
@@ -55,7 +55,7 @@
     "jspdf": "^3.0.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.33",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "9.8.0",
